--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "dotenv-expand": "^10.0.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "joi": "^17.7.1"
   }
 }
