--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "dotenv": "^16.0.3",
     "dotenv-expand": "^10.0.0",
     "express": "^4.18.2",
+    "http-status": "^1.6.2",
     "joi": "^17.7.1"
   }
 }
