--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@prisma/client": "^4.10.1",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
@@ -52,6 +53,7 @@
     "dotenv-expand": "^10.0.0",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
-    "joi": "^17.7.1"
+    "joi": "^17.7.1",
+    "lodash": "^4.17.21"
   }
 }
