--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   "homepage": "https://github.com/vnoboru/project-gym#readme",
   "devDependencies": {
     "@prisma/client": "^4.10.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
@@ -48,12 +50,14 @@
     "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "dotenv-expand": "^10.0.0",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
     "joi": "^17.7.1",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21"
   }
 }
